--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "awcodes/overlook": "^1.3",
         "filament/filament": "^2.17",
         "filament/forms": "^2.17",
+        "filament/spatie-laravel-translatable-plugin": "^2.17",
         "flowframe/laravel-trend": "^0.1.5",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.10",
